# HaskLedger

./: .gitignore  CHANGELOG.md  F-11-Milestone-1-POA-Cardano-ecosystem-analysis.md  F-11-Milestone-2-POA-Cardano-ecosystem-analysis.md  F-11-Milestone-2-POA-Design-Document-Validation.md  F-11-Milestone-3-POA-Core-Functionality-Development.md  F-11-Milestone-3_Core_Functionality_Development.md  F-11-Milestone-4-Prototype-Development-and-Internal-Testing.md  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  Software_and_hardware_specifications.md  cabal.project  flake.nix
c2uplc/src/Covenant/CodeGen/: Common.hs
covenant/: CHANGELOG.md  covenant.cabal
covenant/src/Covenant/: ASG.hs  Data.hs  JSON.hs  Test.hs  Type.hs  Unsafe.hs
covenant/test/asg/: Main.hs
covenant/test/base-functor/: Main.hs
covenant/test/bb/: Main.hs
covenant/test/json-conformance/: Main.hs  conformance_case_1.json  conformance_case_2.json
covenant/test/kindcheck/: Main.hs
covenant/test/primops/: Main.hs
covenant/test/renaming/: Main.hs
covenant/test/type-applications/: Main.hs
deploy-out/: always-succeeds.txt  deadline.txt  escrow.txt  guarded-deadline.txt  hash-lock.txt  hash-verify.txt  multisig.txt  one-shot-nft.txt  oracle.txt  redeemer-match.txt  token-gate.txt  treasury.txt  vesting.txt
docs/: architecture.md  contracts.md  deployment-guide.md  index.html  user-guide.md
docs/haddock/: HaskLedger-Combinators.html  HaskLedger-Compile.html  HaskLedger-Contract.html  HaskLedger-Internal.html  HaskLedger.html  doc-index.html  haskledger.haddock  index.html
examples/: always-succeeds.json  always-succeeds.plutus  deadline.json  deadline.plutus  guarded-deadline.json  guarded-deadline.plutus  redeemer-match.json  redeemer-match.plutus
examples/ms3/: always-succeeds.json  always-succeeds.plutus  deadline.json  deadline.plutus  guarded-deadline.json  guarded-deadline.plutus  redeemer-match.json  redeemer-match.plutus
examples/ms4/: escrow.json  escrow.plutus  hash-lock.json  hash-lock.plutus  hash-verify.json  hash-verify.plutus  multisig.json  multisig.plutus  one-shot-nft.json  one-shot-nft.plutus  oracle.json  oracle.plutus  token-gate.json  token-gate.plutus  treasury.json  treasury.plutus  vesting.json  vesting.plutus
haskledger/: CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVENANT_API_REFERENCE.md  SUPPORT.md  haskledger.cabal
haskledger/deploy/: common.sh  deploy-always-succeeds.sh  deploy-deadline.sh  deploy-escrow.sh  deploy-guarded-deadline.sh  deploy-hash-lock.sh  deploy-hash-verify.sh  deploy-multisig.sh  deploy-one-shot-nft.sh  deploy-oracle.sh  deploy-redeemer-match.sh  deploy-token-gate.sh  deploy-treasury.sh  deploy-vesting.sh  setup-wallet.sh
haskledger/examples/: AlwaysSucceeds.hs  Deadline.hs  Escrow.hs  GuardedDeadline.hs  HashLock.hs  HashVerify.hs  Main.hs  Multisig.hs  OneShotNFT.hs  Oracle.hs  RedeemerMatch.hs  TokenGate.hs  Treasury.hs  Vesting.hs  WalletConfig.hs
haskledger/src/: HaskLedger.hs
haskledger/src/HaskLedger/: Auth.hs  Bool.hs  ByteString.hs  Case.hs  Combinators.hs  Compile.hs  Contract.hs  Crypto.hs  Data.hs  Internal.hs  Ledger.hs  List.hs  Num.hs  Trace.hs  Validator.hs  Value.hs
haskledger/src/HaskLedger/Internal/: Builtin.hs  Data.hs
haskledger/test/: ContractTests.hs  ConvenienceTests.hs  CoreTests.hs  CryptoTests.hs  DumpMultisigASG.hs  DumpMultisigUPLC.hs  DumpOracleASG.hs  DumpOracleUPLC.hs  LedgerTests.hs  Main.hs  MatchingTests.hs  TestHelper.hs
haskledger/test/Test/: Combinators.hs  Compile.hs  Contract.hs  Convenience.hs  DEXSwap.hs  Escrow.hs  Examples.hs  ExtendedBuiltins.hs  HashLock.hs  HashVerify.hs  Internal.hs  List.hs  Literals.hs  Multisig.hs  OneShotNFT.hs  Oracle.hs  PatternMatching.hs  SignatureVerification.hs  TokenGate.hs  Treasury.hs  TxInfo.hs  Value.hs  Vesting.hs
outputs/: always-succeeds.md  deadline.md  guarded-deadline.md  redeemer-match.md
